Ajout service header

--- a/src/main/resources/conf/messages_en.properties
+++ b/src/main/resources/conf/messages_en.properties
@@ -13,5 +13,6 @@ exception.fits.null = Fits is not initialized
 exception.fits.WaveNotFound = No wave found
 
 # Rest services
+exception.rest.header.syntax = Syntax\nfits/header?entry=<fits file>[&metadata=<pattern1,pattern2,...>]
 exception.rest.slide.syntax = Syntax\nfits/slide?entry=<fits file>[&metadata=<pattern1,pattern2,...>][&naxis3=<hdu indexe>]
 exception.rest.spectrum.syntax = Syntax\nfits/spectrum?entry=<fichier fits>[&metadata=<pattern1,pattern2,...>][&naxis1=<xcoord>][&naxis2=<ycoord>]
