--- a/src/main/resources/conf/messages_fr.properties
+++ b/src/main/resources/conf/messages_fr.properties
@@ -13,6 +13,7 @@ exception.fits.null = fits n'est pas initialisé
 exception.fits.WaveNotFound = No wave found
 
 # Rest services
+exception.rest.header.syntax = Syntaxe\nfits/header?entry=<fichier fits>[&metadata=<pattern1,pattern2,...>]
 exception.rest.slide.syntax = Syntaxe\nfits/slide?entry=<fichier fits>[&metadata=<pattern1,pattern2,...>][&naxis3=<index hdu>]
 exception.rest.spectrum.syntax = Syntaxe\nfits/spectrum?entry=<fichier fits>[&metadata=<pattern1,pattern2,...>][&naxis1=<xcoord>][&naxis2=<ycoord>]
 
