MaJ services rest

--- a/src/main/resources/conf/messages_fr.properties
+++ b/src/main/resources/conf/messages_fr.properties
@@ -13,7 +13,9 @@ exception.fits.null = fits n'est pas initialisé
 exception.fits.WaveNotFound = No wave found
 
 # Rest services
-exception.rest.header.syntax = Syntaxe\nfits/header?entry=<fichier fits>[&metadata=<pattern1,pattern2,...>]
-exception.rest.slide.syntax = Syntaxe\nfits/slide?entry=<fichier fits>[&metadata=<pattern1,pattern2,...>][&naxis3=<index hdu>]
-exception.rest.spectrum.syntax = Syntaxe\nfits/spectrum?entry=<fichier fits>[&metadata=<pattern1,pattern2,...>][&naxis1=<xcoord>][&naxis2=<ycoord>]
+exception.rest.header.syntax = Syntaxe\nheader?entry=<fichier>[&metadata=<pattern1,pattern2,...>]
+exception.rest.slide.syntax = Syntaxe\nslide?entry=<fichier>[&metadata=<pattern1,pattern2,...>][&posZ=<zlevel>]
+exception.rest.spectrum.syntax = Syntaxe\nspectrum?entry=<fichier>[&metadata=<pattern1,pattern2,...>][&posX=<xcoord>][&posY=<ycoord>]
 
+# datacube
+exception.cube.dimMissing = Une dimension du cube ({0}) est manquante.
