--- a/src/main/resources/conf/messages_en.properties
+++ b/src/main/resources/conf/messages_en.properties
@@ -13,6 +13,9 @@ exception.fits.null = Fits is not initialized
 exception.fits.WaveNotFound = No wave found
 
 # Rest services
-exception.rest.header.syntax = Syntax\nfits/header?entry=<fits file>[&metadata=<pattern1,pattern2,...>]
-exception.rest.slide.syntax = Syntax\nfits/slide?entry=<fits file>[&metadata=<pattern1,pattern2,...>][&naxis3=<hdu indexe>]
-exception.rest.spectrum.syntax = Syntax\nfits/spectrum?entry=<fichier fits>[&metadata=<pattern1,pattern2,...>][&naxis1=<xcoord>][&naxis2=<ycoord>]
+exception.rest.header.syntax = Syntax\nheader?entry=<file>[&metadata=<pattern1,pattern2,...>]
+exception.rest.slide.syntax = Syntax\nslide?entry=<file>[&metadata=<pattern1,pattern2,...>][&posZ=<zlevel>]
+exception.rest.spectrum.syntax = Syntax\nspectrum?entry=<fits>[&metadata=<pattern1,pattern2,...>][&posX=<xcoord>][&posY=<ycoord>]
+
+# datacube
+exception.cube.dimMissing = Dimension of cube ({0}) is missing.
