Implémentation pour Mizar

--- a/src/main/resources/conf/messages_fr.properties
+++ b/src/main/resources/conf/messages_fr.properties
@@ -7,10 +7,11 @@ exception.app = Erreur de l''application cubeExplorer.
 exception.app.syntax = Syntaxe\ncubeExplorer [-h] [-l <LEVEL>] -f <fichier>\n\
 \   -h | --help         Cette page. \n\
 \   -l | --level        Niveau de trace (OFF, FATAL, ERROR, WARN, INFO, DEBUG, TRACE, ALL) \n\
-\   -f | --fits         Nom et chemin du fichier fits.
+\   -f | --file         Nom et chemin du fichier des données.
 
-exception.fits.null = fits n'est pas initialisé
-exception.fits.WaveNotFound = No wave found
+exception.file.null = Le fichier n'est pas initialisé
+exception.file.unknown = Le type du fichier n'est pas connu
+exception.file.WaveNotFound = Spectre non trouvé
 
 # Rest services
 exception.rest.header.syntax = Syntaxe\nheader?entry=<fichier>[&metadata=<pattern1,pattern2,...>]
