--- a/src/main/resources/conf/messages_en.properties
+++ b/src/main/resources/conf/messages_en.properties
@@ -7,10 +7,11 @@ exception.app = cubeExplorer application error.
 exception.app.syntax = Syntax\cubeExplorer [-h] [-l <LEVEL>] -f <file>\n\
 \   -h | --help         This page. \n\
 \   -l | --level        Log level (OFF, FATAL, ERROR, WARN, INFO, DEBUG, TRACE, ALL)\n\
-\   -f | --fits         Name and path to fits file.\n
+\   -f | --file         Name and path to data file.\n
 
-exception.fits.null = Fits is not initialized
-exception.fits.WaveNotFound = No wave found
+exception.file.null = File is not initialized
+exception.file.unknown = Type file is not identified
+exception.file.WaveNotFound = No wave found
 
 # Rest services
 exception.rest.header.syntax = Syntax\nheader?entry=<file>[&metadata=<pattern1,pattern2,...>]
