Update rest Services and add log file and bouchon object localisation and object type

--- a/src/main/resources/conf/messages_en.properties
+++ b/src/main/resources/conf/messages_en.properties
@@ -3,7 +3,7 @@
 # ******************************************************************************/
 
 # cubeExplorer
-exception.app = cubeExplorer application error.
+exception.app = CubeExplorer application error
 exception.app.syntax = Syntax\cubeExplorer [-h] [-l <LEVEL>] -f <file>\n\
 \   -h | --help         This page. \n\
 \   -l | --level        Log level (OFF, FATAL, ERROR, WARN, INFO, DEBUG, TRACE, ALL)\n\
